testcases/bindgen/61/error_message.txt
warning: type `void_fn` should have an upper camel case name
 --> ./closed/61/reported_bindings.rs:3:10
  |
3 | pub type void_fn = ::std::option::Option<unsafe extern "stdcall" f...
  |          ^^^^^^^ help: convert the identifier to upper camel case: `VoidFn`
  |
  = note: `#[warn(non_camel_case_types)]` on by default

warning: type `fn_` should have an upper camel case name
 --> ./closed/61/reported_bindings.rs:4:10
  |
4 | pub type fn_ = ::std::option::Option<
  |          ^^^ help: convert the identifier to upper camel case: `Fn`

error[E0045]: C-variadic function must have a compatible calling convention, like `C` or `cdecl`
 --> ./closed/61/reported_bindings.rs:8:9
  |
8 |         unsafe extern "stdcall" fn(id: ::std::os::raw::c_int, ...),
  |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ C-variadic function must have a compatible calling convention

error: aborting due to 1 previous error; 2 warnings emitted

For more information about this error, try `rustc --explain E0045`.
